<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (C) 2014-2024 Philip Helger (www.helger.com)
    philip[at]helger[dot]com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.helger</groupId>
    <artifactId>parent-pom</artifactId>
    <version>2.0.5</version>
  </parent>
  <artifactId>ph-genericode</artifactId>
  <version>7.1.4-SNAPSHOT</version>
  <packaging>bundle</packaging>
  <name>ph-genericode</name>
  <description>Library to read and write OASIS GeneriCode and CVA documents</description>
  <url>https://github.com/phax/ph-genericode</url>
  <inceptionYear>2014</inceptionYear>

  <licenses>
    <license>
      <name>Apache 2</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/phax/ph-genericode.git</connection>
    <developerConnection>scm:git:https://github.com/phax/ph-genericode.git</developerConnection>
    <url>https://github.com/phax/ph-genericode</url>
    <tag>HEAD</tag>
  </scm>

  <organization>
    <name>Philip Helger</name>
    <url>https://www.helger.com</url>
  </organization>

  <developers>
    <developer>
      <id>philip</id>
      <name>Philip Helger</name>
      <email>ph(at)helger.com</email>
      <url>https://www.helger.com</url>
    </developer>
  </developers>

  <properties>
    <jaxb-plugin.group>org.jvnet.jaxb</jaxb-plugin.group>
    <jaxb-plugin.artifact>jaxb-maven-plugin</jaxb-plugin.artifact>
    <jaxb-plugin.version>4.0.6</jaxb-plugin.version>
    <ph-jaxb-plugin.version>4.0.3</ph-jaxb-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.helger.commons</groupId>
        <artifactId>ph-commons-parent-pom</artifactId>
        <version>11.1.6</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.helger.xsd</groupId>
        <artifactId>ph-xsds-parent-pom</artifactId>
        <version>3.0.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.helger</groupId>
        <artifactId>ph-poi</artifactId>
        <version>6.0.2</version>
      </dependency>
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.16.1</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.helger.commons</groupId>
      <artifactId>ph-commons</artifactId>
    </dependency>
    <dependency>
      <groupId>com.helger.commons</groupId>
      <artifactId>ph-xml</artifactId>
    </dependency>
    <dependency>
      <groupId>com.helger.commons</groupId>
      <artifactId>ph-jaxb</artifactId>
    </dependency>
    <dependency>
      <groupId>com.helger.xsd</groupId>
      <artifactId>ph-xsds-xml</artifactId>
    </dependency>

    <dependency>
      <groupId>com.helger</groupId>
      <artifactId>ph-poi</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <extensions>true</extensions>
        <configuration>
          <instructions>
            <Automatic-Module-Name>com.helger.genericode</Automatic-Module-Name>
            <Export-Package>
              com.helger.cva,
              com.helger.cva.v10,
              com.helger.genericode,
              com.helger.genericode.builder,
              com.helger.genericode.excel,
              com.helger.genericode.v04,
              com.helger.genericode.v10
            </Export-Package>
            <Import-Package>!javax.annotation.*,*</Import-Package>
          </instructions>
        </configuration>
      </plugin>
      <plugin>
        <groupId>${jaxb-plugin.group}</groupId>
        <artifactId>${jaxb-plugin.artifact}</artifactId>
        <version>${jaxb-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <bindingDirectory>${basedir}/src/main/jaxb</bindingDirectory>
          <schemaDirectory>${basedir}/src/main/resources/external/schemas</schemaDirectory>
          <extension>true</extension>
          <strict>false</strict>
          <catalog>${basedir}/src/main/jaxb/catalog.txt</catalog>
          <args>
            <arg>-no-header</arg>
            <arg>-Xph-default-locale</arg>
            <arg>en_US</arg>
            <arg>-Xph-annotate</arg>
            <arg>-Xph-fields-private</arg>
            <arg>-Xph-code-quality</arg>
            <arg>-Xph-implements</arg>
            <arg>java.io.Serializable</arg>
            <arg>-Xph-equalshashcode</arg>
            <arg>-Xph-tostring</arg>
            <arg>-Xph-list-extension</arg>
            <arg>-Xph-csu</arg>
            <arg>-Xph-cloneable2</arg>
            <arg>-Xph-value-extender</arg>
            <arg>-Xph-offset-dt-extension</arg>
          </args>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>com.helger</groupId>
            <artifactId>ph-jaxb-plugin</artifactId>
            <version>${ph-jaxb-plugin.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <doclint>none</doclint>
          <source>8</source>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
